--- a/VISION POR COMPUTADORA/TAREA 7/REEPORTE/Biblio.bib
+++ b/VISION POR COMPUTADORA/TAREA 7/REEPORTE/Biblio.bib
@@ -1,3 +1,13 @@
+@misc{coste2012image,
+  author       = {Arthur Coste},
+  title        = {CS6640: Image Processing – Project 3: Affine Transformation, Landmarks Registration, Non-linear Warping},
+  year         = {2012},
+  month        = {October},
+  note         = {Course project for CS6640, University of Utah},
+  howpublished = {\url{https://www.sci.utah.edu/~acoste/uou/Image/project3/ArthurCOSTE_Project3.pdf}}
+}
+
+
 @book{gonzalez2018digital,
   title     = {Digital Image Processing},
   author    = {Gonzalez, Rafael C. and Woods, Richard E.},
