tarea 9 logica difusa

--- a/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
+++ b/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
@@ -1,8 +1,18 @@
-@book{johnson2007,
-  title     = {Applied Multivariate Statistical Analysis},
-  author    = {Johnson, Richard A. and Wichern, Dean W.},
-  year      = {2007},
-  edition   = {6th},
-  publisher = {Pearson},
-  address   = {Upper Saddle River, NJ}
+
+@article{wang_survey_2015,
+	title = {Survey on distance metric learning and dimensionality reduction in data mining},
+	volume = {29},
+	issn = {1384-5810, 1573-756X},
+	url = {http://link.springer.com/10.1007/s10618-014-0356-z},
+	doi = {10.1007/s10618-014-0356-z},
+	abstract = {Distance metric learning is a fundamental problem in data mining and knowledge discovery. Many representative data mining algorithms, such as k-nearest neighbor classiﬁer, hierarchical clustering and spectral clustering, heavily rely on the underlying distance metric for correctly measuring relations among input data. In recent years, many studies have demonstrated, either theoretically or empirically, that learning a good distance metric can greatly improve the performance of classiﬁcation, clustering and retrieval tasks. In this survey, we overview existing distance metric learning approaches according to a common framework. Speciﬁcally, depending on the available supervision information during the distance metric learning process, we categorize each distance metric learning algorithm as supervised, unsupervised or semi-supervised. We compare those different types of metric learning methods, point out their strength and limitations. Finally, we summarize open challenges in distance metric learning and propose future directions for distance metric learning.},
+	language = {en},
+	number = {2},
+	urldate = {2025-04-28},
+	journal = {Data Mining and Knowledge Discovery},
+	author = {Wang, Fei and Sun, Jimeng},
+	month = mar,
+	year = {2015},
+	pages = {534--564},
+	file = {PDF:C\:\\Users\\Angel\\Zotero\\storage\\BI6BTXDV\\Wang y Sun - 2015 - Survey on distance metric learning and dimensionality reduction in data mining.pdf:application/pdf},
 }
