--- a/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
+++ b/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
@@ -16,3 +16,13 @@
 	pages = {534--564},
 	file = {PDF:C\:\\Users\\Angel\\Zotero\\storage\\BI6BTXDV\\Wang y Sun - 2015 - Survey on distance metric learning and dimensionality reduction in data mining.pdf:application/pdf},
 }
+
+@book{johnson2007,
+  title     = {Applied Multivariate Statistical Analysis},
+  author    = {Johnson, Richard A. and Wichern, Dean W.},
+  year      = {2007},
+  edition   = {6th},
+  publisher = {Pearson},
+  address   = {Upper Saddle River, NJ},
+  isbn      = {9780131877153}
+}
